<resources>
    <string name="app_name">Ageska</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Developer</string>
    <string name="home_second">Home Second</string>
    <string name="hint_username">Username</string>
    <string name="hint_pass">Password</string>
    <string name="hintforgot">Forgot Password ?</string>
    <string name="hint_forgot">Forgot Password ?</string>
    <string name="tv_forgot">Forgot Password ?</string>
    <string name="tv_login">Login, Please!</string>
    <string name="tv_welcome">Welcome Back To Shoppy</string>
    <string name="img_logo">Logo</string>
    <string name="tv_selamat">Welcome To Shoppy</string>
    <string name="hint_signin">Login</string>
    <string name="tv_userlogin">Eka Suryani Indra Septiawati</string>
</resources>