<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/imglogo"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_below="@+id/imglogo"
            android:textAlignment="center"
            android:id="@+id/tvSelamatdatang"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:text="@string/tv_selamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_below="@+id/tvSelamatdatang"
            android:textAlignment="center"
            android:id="@+id/tvlogin"
            android:layout_marginBottom="50dp"
            android:text="@string/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:autofillHints="@string/hint_username"
            android:drawableStart="@drawable/ic_username"
            android:layout_marginBottom="@dimen/fab_margin"
            android:hint="@string/hint_username"
            android:textAlignment="center"
            android:id="@+id/etUsername"
            android:layout_below="@+id/tvlogin"
            android:layout_centerHorizontal="true"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:autofillHints="@string/hint_pass"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/hint_pass"
            android:textAlignment="center"
            android:id="@+id/etPassword"
            android:layout_below="@+id/etUsername"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnLogin"
            android:textColorHint="@color/white"
            android:hint="@string/hint_signin"
            android:background="@drawable/btn_sign_in"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/tvForgot"
            android:layout_below="@id/btnLogin"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/tv_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>